--- a/index.html
+++ b/index.html
@@ -221,15 +221,19 @@
         <div class="container text-center">
             <h6 class="section-title mb-4">Portfolio</h6>
             <p class="mb-5 pb-4"> Here are some works that I would like to show you that I have worked on recently.</p>
+            <p>
+                <small>*Some projects are currently not maintained</small>
+            </p>
 
             <div class="row">
                 <div class="col-sm-4">
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-1.jpg" alt="">
+                        <img src="assets/imgs/portfolio/viertuak-doctor.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Working On...</h5>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Virtual Doctor</h5>
+                                <a href="https://virtual-doctor-ccf9f.web.app/" target="_blank"><i
+                                        class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -361,14 +365,13 @@
 
     <!-- Page Footer -->
     <footer class="page-footer">
-        <div class="container">
-            <div class="row align-items-center">
-                <p class="text-center">
-                    ❤ by <a class="social-item" href="https://www.linkedin.com/in/vikas-kare" target="_blank">Vikas
-                        Kare</a>
-                </p>
-            </div>
-
+        <div class="container align-items-center">
+            <hr>
+            <p class="text-center">
+                ❤ by <a class="social-item" href="https://www.linkedin.com/in/vikas-kare" target="_blank">Vikas
+                    Kare</a>
+            </p>
+            <hr>
         </div>
         </div>
     </footer>
