--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
     <section id="experience" class="section">
         <div class="container text-center">
             <h6 class="section-title mb-4">Experience</h6>
-            <p class="mb-5 pb-4">I enjoy working with the team having same goal and diffrent creative mindsets. </p>
+            <p class="mb-5 pb-4">Working with a team that has diverse creative mindsets and a shared goal can be an
+                enriching and stimulating experience </p>
 
             <div class="row text-left">
                 <div class="col-md-4">
