--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
     <section id="experience" class="section">
         <div class="container text-center">
             <h6 class="section-title mb-4">Experience</h6>
-            <p class="mb-5 pb-4">Working with a team that has diverse creative mindsets and a shared goal can be an
-                enriching and stimulating experience </p>
+            <p class="mb-5 pb-4">Collaborating with the back-end team on various integrations, optimizing the website's
+                functionality and ensuring efficient communication between different systems and technologies. </p>
 
             <div class="row text-left">
                 <div class="col-md-4">
@@ -311,7 +311,9 @@
                                     Nov 2022 to Present
                                 </small>
                             </div>
-                            <p>Working with back-end team on various integrations. </p>
+                            <p>Collaborated with the back-end team on various integrations, optimizing the website's
+                                functionality and ensuring efficient communication between different systems and
+                                technologies. </p>
                             <p> Skills: Python, Django, DRF, API Development, Ruby, Workato, MySQL,
                                 SQL, JavaScript </p>
                         </div>
@@ -327,7 +329,9 @@
                                     Mar 2022 to Nov 2022
                                 </small>
                             </div>
-                            <p>Worked with back-end team on various integrations. </p>
+                            <p>Collaborated with the back-end team on various integrations, optimizing the website's
+                                functionality and ensuring efficient communication between different systems and
+                                technologies. </p>
                             <p> Skills: Python, Django, DRF, API Development, Ruby, Workato, MySQL,
                                 SQL, JavaScript </p>
                         </div>
@@ -343,7 +347,9 @@
                                     May 2020 to July 2020
                                 </small>
                             </div>
-                            <p>Worked with front-end team to improve UI of the client's website </p>
+                            <p>Collaborated with the front-end team to identify areas of improvement in the client's
+                                website design, and implemented effective UI changes to enhance the website's visual
+                                appeal, functionality, and user engagement. </p>
                             <p> Skills: HTML, CSS, JavaScript, Bootstrap</p>
                         </div>
                     </div>
