Fixed the experience quote issue

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
     <section id="experience" class="section">
         <div class="container text-center">
             <h6 class="section-title mb-4">Experience</h6>
-            <p class="mb-5 pb-4">Collaborating with the back-end team on various integrations, optimizing the website's
-                functionality and ensuring efficient communication between different systems and technologies. </p>
+            <p class="mb-5 pb-4">Working with a team that has diverse creative mindsets and a shared goal can be an
+                enriching and stimulating experience </p>
 
             <div class="row text-left">
                 <div class="col-md-4">
@@ -311,7 +311,7 @@
                                     Nov 2022 to Present
                                 </small>
                             </div>
-                            <p>Collaborated with the back-end team on various integrations, optimizing the website's
+                            <p>Collaborating with the back-end team on various integrations, optimizing the website's
                                 functionality and ensuring efficient communication between different systems and
                                 technologies. </p>
                             <p> Skills: Python, Django, DRF, API Development, Ruby, Workato, MySQL,
