--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="I am Vikas Kare a Software Engineer">
+    <meta name="description"
+        content="I am Vikas Kare a Software Engineer. I specialize in Python, Django, DRF, API development, Ruby, Workato, MySQL, SQL, and JavaScript.">
     <meta name="author" content="Vikas Kare">
     <title>Resume | Vikas Kare</title>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/imgs/icon.png">
@@ -314,8 +315,8 @@
                             <p>Collaborating with the back-end team on various integrations, optimizing the website's
                                 functionality and ensuring efficient communication between different systems and
                                 technologies. </p>
-                            <p> Skills: Python, Django, DRF, API Development, Ruby, Workato, MySQL,
-                                SQL, JavaScript </p>
+                            <p> Skills: <b>Python, Django, DRF, API Development, Ruby, Workato, MySQL,
+                                    SQL, JavaScript </b></p>
                         </div>
                     </div>
                 </div>
@@ -332,8 +333,8 @@
                             <p>Collaborated with the back-end team on various integrations, optimizing the website's
                                 functionality and ensuring efficient communication between different systems and
                                 technologies. </p>
-                            <p> Skills: Python, Django, DRF, API Development, Ruby, Workato, MySQL,
-                                SQL, JavaScript </p>
+                            <p> Skills: <b>Python, Django, DRF, API Development, Ruby, Workato, MySQL,
+                                    SQL, JavaScript </b></p>
                         </div>
                     </div>
                 </div>
@@ -350,7 +351,7 @@
                             <p>Collaborated with the front-end team to identify areas of improvement in the client's
                                 website design, and implemented effective UI changes to enhance the website's visual
                                 appeal, functionality, and user engagement. </p>
-                            <p> Skills: HTML, CSS, JavaScript, Bootstrap</p>
+                            <p> Skills: <b>CSS, JavaScript, Bootstrap</b></p>
                         </div>
                     </div>
                 </div>
