--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <p>Collaborated with the front-end team to identify areas of improvement in the client's
                                 website design, and implemented effective UI changes to enhance the website's visual
                                 appeal, functionality, and user engagement. </p>
-                            <p> Skills: <b>CSS, JavaScript, Bootstrap</b></p>
+                            <p> Skills: <b>HTML, CSS, JavaScript, Bootstrap</b></p>
                         </div>
                     </div>
                 </div>
