--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="widget-item">
                 <h2>8.7</h2>
                 <p>CGPA</p>
-                <p>Computer Engineer (B.Tech)</p>
+                <p>Computer Science (B.Tech)</p>
             </div>
             <div class="widget-item">
                 <h2>5<small>⭐</small></h2>
@@ -132,7 +132,7 @@
     <section id="skills" class="section">
         <div class="container text-center">
             <h6 class="section-title mb-4">Skills</h6>
-            <p class="mb-5 pb-4">Here is skill set that I have developed in past few years.</p>
+            <p class="mb-5 pb-4">Here are skills that I have developed in past few years.</p>
 
             <div class="row text-left">
                 <div class="col-sm-6">
@@ -253,8 +253,8 @@
                         <img src="assets/imgs/folio-3.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Working On...</h5>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Blog App</h5>
+                                <a href="https://github.com/vikaskare/Blog" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
