Updated the skills section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap main styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -128,94 +129,137 @@
         </div>
     </section>
 
-    <!-- Skills section -->
+    <!-- Skills Section -->
     <section id="skills" class="section">
         <div class="container text-center">
             <h6 class="section-title mb-4">Skills</h6>
             <p class="mb-5 pb-4">Here are skills that I have developed in past few years.</p>
 
             <div class="row text-left">
-                <div class="col-sm-6">
-                    <h6 class="mb-3">Python</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                <div class="col-lg-4">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Programming Languages</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/python.png" alt="Python Logo" class="icon-img mb-2">
+                                    <p>Python</p>
+                                </div>
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/js.png" alt="JavaScript Logo" class="icon-img mb-2">
+                                    <p>JavaScript</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">Web Design</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
+                <div class="col-lg-6">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Web Development</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-3 p-3 text-center">
+                                    <img src="assets/imgs/logos/html-5.png" alt="HTML 5 Logo" class="icon-img mb-2">
+                                    <p>HTML</p>
+                                </div>
+                                <div class="col-3 p-3 text-center">
+                                    <img src="assets/imgs/logos/css-3.png" alt="CSS 3 Logo" class="icon-img mb-2">
+                                    <p>CSS</p>
+                                </div>
+                                <div class="col-3 p-3 text-center">
+                                    <img src="assets/imgs/logos/bootstrap.png" alt="Bootstrap Logo"
+                                        class="icon-img mb-2">
+                                    <p>Bootstrap</p>
+                                </div>
+                                <div class="col-3 p-3 text-center">
+                                    <img src="assets/imgs/logos/react.png" alt="ReactJS Logo" class="icon-img mb-2">
+                                    <p>ReactJS</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">Django</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
+                <div class="col-lg-4">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Web Framework</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/django-logo.png" alt="Django Logo"
+                                        class="icon-img mb-2">
+                                    <p>Django</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">AWS</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>70%</span></div>
+                <div class="col-lg-4">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Cloud Platforms</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/aws.png" alt="AWS Logo" class="icon-img mb-2">
+                                    <p>AWS</p>
+                                </div>
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/heroku.png" alt="Heroku Logo" class="icon-img mb-2">
+                                    <p>Heroku</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">MySQL</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
+                <div class="col-lg-4">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Database</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/mysql.png" alt="MySQL Logo" class="icon-img mb-2">
+                                    <p>MySQL</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">HTML</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
+                <div class="col-lg-4">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Version Control</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/git.png" alt="Git Logo" class="icon-img mb-2">
+                                    <p>Git</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">ReactJS</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>70%</span></div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">CSS</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">Bootstrap</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">JavaScript</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <h6 class="mb-3">Git - Version Control</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                <div class="col-lg-4">
+                    <div class="card border mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Integration and Automation</h5>
+                            <hr>
+                            <div class="row">
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/workato.png" alt="Workato Logo" class="icon-img mb-2">
+                                    <p>Workato</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End of Skills sections -->
+
 
     <!-- Portfolio section -->
     <section id="portfolio" class="section">
@@ -294,7 +338,7 @@
     </section>
     <!-- End of portfolio section -->
 
-    <!-- Blog Section -->
+    <!-- Experience Section -->
     <section id="experience" class="section">
         <div class="container text-center">
             <h6 class="section-title mb-4">Experience</h6>
