Skill added (core java)

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
                                     <img src="assets/imgs/logos/js.png" alt="JavaScript Logo" class="icon-img mb-2">
                                     <p>JavaScript</p>
                                 </div>
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/java.png" alt="Java Logo" class="icon-img mb-2">
+                                    <p>Core Java</p>
+                                </div>
                             </div>
                         </div>
                     </div>
