Added shine effect on profile image

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
     <section id="about" class="section mt-3">
         <div class="container mt-5">
             <div class="row text-center text-md-left">
-                <div class="col-md-3">
-                    <img src="assets/imgs/profile-photo.jpg" alt="" class="img-thumbnail mb-4">
+                <div class="col-md-3 hover1">
+                    <figure>
+                        <img src="assets/imgs/profile-photo.jpg" alt="" class="img-thumbnail mb-4">
+                    </figure>
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Vikas Kare</h6>
