Skill Added (Spring)

--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
                                         class="icon-img mb-2">
                                     <p>Django</p>
                                 </div>
+                                <div class="col-4 p-3 text-center">
+                                    <img src="assets/imgs/logos/spring.png" alt="Spring Logo" class="icon-img mb-2">
+                                    <p>Spring</p>
+                                </div>
                             </div>
                         </div>
                     </div>
