Updated the Resume

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <i>- Software Engineer</i>
 
                 <div class="buttons pt-3">
-                    <a href="https://drive.google.com/uc?export=download&id=1JE8xbfaFefP0Em6ahhanMRyvAidZT0sV"
+                    <a href="https://docs.google.com/document/d/1vwTd9f1To1CRaWldGQwZ1zyDFF2BxrXIldf62HxDH1k/edit?usp=sharing"
                         class="btn btn-dark rounded">DOWNLOAD RESUME</a>
                 </div>
 
@@ -124,7 +124,7 @@
                     <p>In addition to my development work, I'm also an accomplished competitive programmer. Through my
                         competitive experience, I've developed strong analytical and critical thinking skills and an
                         ability to quickly identify and solve complex problems.</p>
-                    <a href="https://drive.google.com/uc?export=download&id=1JE8xbfaFefP0Em6ahhanMRyvAidZT0sV"
+                    <a href="https://docs.google.com/document/d/1vwTd9f1To1CRaWldGQwZ1zyDFF2BxrXIldf62HxDH1k/edit?usp=sharing"
                         class="btn btn-primary rounded mt-3">DOWNLOAD RESUME</a>
                 </div>
             </div>
