small style change

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="buttons pt-3">
                     <a href="https://docs.google.com/document/d/1vwTd9f1To1CRaWldGQwZ1zyDFF2BxrXIldf62HxDH1k/edit?usp=sharing"
-                        class="btn btn-dark rounded">DOWNLOAD RESUME</a>
+                        class="btn btn-dark rounded" target="_blank">DOWNLOAD RESUME</a>
                 </div>
 
                 <div class="socials mt-4">
@@ -125,7 +125,7 @@
                         competitive experience, I've developed strong analytical and critical thinking skills and an
                         ability to quickly identify and solve complex problems.</p>
                     <a href="https://docs.google.com/document/d/1vwTd9f1To1CRaWldGQwZ1zyDFF2BxrXIldf62HxDH1k/edit?usp=sharing"
-                        class="btn btn-primary rounded mt-3">DOWNLOAD RESUME</a>
+                        class="btn btn-primary rounded mt-3" target="_blank">DOWNLOAD RESUME</a>
                 </div>
             </div>
         </div>
