Chenged spring boot logo

--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
                                     <p>Django</p>
                                 </div>
                                 <div class="col-4 p-3 text-center">
-                                    <img src="assets/imgs/logos/spring.png" alt="Spring Logo" class="icon-img mb-2">
-                                    <p>Spring</p>
+                                    <img src="assets/imgs/logos/spring-boot-logo.png" alt="Spring Boot Logo"
+                                        class="icon-img mb-2">
+                                    <p>Spring Boot</p>
                                 </div>
                             </div>
                         </div>
